Issue #871: Left-align categories on sidebar

--- a/themes/custom/mappy/sass/components/regions/_sidebar.scss
+++ b/themes/custom/mappy/sass/components/regions/_sidebar.scss
@@ -59,7 +59,10 @@
         margin: 0 auto;
         max-width: 360px;
         width: 100%;
+      }
 
+      .sidebar__node-content__tags {
+        text-align: left;
       }
 
       .sidebar__node-content__more-link a {
